--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
     </header>
     <!-- failure section -->
 
-    <section style="margin-top: 100px; width: 1600px;
-    height: 3229px;">
+    <section style="margin-top: 100px; width: 1600px;">
         <div style="display: flex; align-items: center; justify-content: space-around;">
             <div>
                 <img src="/images/person.png" alt="">
@@ -47,6 +46,34 @@
                     <li>Contrary to popular simply.</li>
                 </ul>
             </div>
+        </div>
+    </section>
+
+    <h1 style="color:#151414 ;text-align: center; font-size: 40px; margin-top: 100px;">My Plans</h1>
+
+    <section>
+        <div style="display: flex; gap: 150px; justify-content: center; margin-top: 100px; margin-bottom: 100px;">
+            <div>
+                <img  style="padding-left: 80px;" src="/images/icons/web.png" alt="">
+                <h3> Web Development</h3>
+                <p class="p">I want to start</p>
+            </div>
+            <div>
+                <img style="padding-left: 30px;" src="/images/icons/js.png" alt="">
+                <h3>Javascript</h3>
+                <p  class="p">I want to learn</p>
+            </div>
+            <div>
+                <img style="padding-left: 50px;" src="/images/icons/smoke.png" alt="">
+                <h3>Smoking Habit</h3>
+                <p  class="p">I want to end</p>
+            </div>
+            <div>
+                <img style="padding-left: 40px;" src="/images/icons/ecom.png" alt="">
+                <h3>ecommerce</h3>
+                <p  class="p">I want to develop</p>
+            </div>
+            
         </div>
     </section>
 </body>
