--- a/index.html
+++ b/index.html
@@ -76,6 +76,30 @@
             
         </div>
     </section>
+
+    <!-- foot bannner section -->
+
+    <section class="foot-banner">
+        <h2 class="always">Awlays keep a positive <br> mindset</h2>
+         <button class="call">Call Now</button>
+    </section>
+
+    <!-- footer section -->
+    <footer class="footer">
+      <div class="footer-box">
+         <div>
+            <h3 style="color: white; margin: 130px 0px 16px 231px;">Future</h3>
+            <p style="margin: 0px 0px 300px 230px;">There are many variations of passages of Lorem Ipsum <br>  available, but the majority have suffered alteration in <br> some form, by injected humour, or randomised words</p>
+            <p>Email : info@gmail.com</p>
+            <p>Phone : 01500 00 00 00</p>
+         </div>
+         <div>
+           <h4 style= "margin: 130px 431px 5px 0px; font-size: 24px;">Subscribe</h4>
+           <input placeholder="mohin@gmail.com" type="email" name="" id=""> <br>
+           <button type="submit" style="background: #005FAC;; color: white; border-radius: 5px;">Subscribe</button>
+         </div>
+      </div>
+    </footer>
 </body>
 
 </html>
