--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
       <div class="footer-box">
          <div>
             <h3 style="color: white; margin: 130px 0px 16px 231px;">Future</h3>
-            <p style="margin: 0px 0px 300px 230px;">There are many variations of passages of Lorem Ipsum <br>  available, but the majority have suffered alteration in <br> some form, by injected humour, or randomised words</p>
-            <p>Email : info@gmail.com</p>
-            <p>Phone : 01500 00 00 00</p>
+            <p style="margin: 0px 0px 16px 230px;">There are many variations of passages of Lorem Ipsum <br>  available, but the majority have suffered alteration in <br> some form, by injected humour, or randomised words</p>
+            <p style="margin: 0px 0px 16px 230px;">Email : info@gmail.com</p>
+            <p style="margin: 0px 0px 16px 230px;">Phone : 01500 00 00 00</p>
          </div>
          <div>
            <h4 style= "margin: 130px 431px 5px 0px; font-size: 24px;">Subscribe</h4>
