--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
          <div>
            <h4 style= "margin: 130px 431px 5px 0px; font-size: 24px;">Subscribe</h4>
            <input placeholder="mohin@gmail.com" type="email" name="" id=""> <br>
-           <button type="submit" style="background: #005FAC;; color: white; border-radius: 5px;">Subscribe</button>
+           <button class="" type="submit" style="background: #005FAC;; color: white; border-radius: 5px;">Subscribe</button>
          </div>
       </div>
     </footer>
